--- a/TaikuriAppi/appsettings.json
+++ b/TaikuriAppi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VarausDB": "HOX! tähän connectionstringi sitten" //Miran kone (server)"
+  } 
 }
